fix: improve dark mode transition

--- a/src/assets/styles/components/_navbar.scss
+++ b/src/assets/styles/components/_navbar.scss
@@ -1,6 +1,5 @@
 .navbar {
   @apply border-b bg-white dark:bg-dark border-c-light-gray dark:border-c-soft-black py-3 relative z-40 sticky top-0;
-  @include transition('colors');
 
   .nav {
     @apply flex justify-between items-center;
